--- a/HYNewNest/Features(主代码)/MeComponent/CopartnerComponent/Controller/BYSuperCopartnerVC.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/CopartnerComponent/Controller/BYSuperCopartnerVC.xib
@@ -16,6 +16,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BYSuperCopartnerVC">
             <connections>
+                <outlet property="bonusBoardHeightCons" destination="RGU-dK-hpT" id="pAb-1D-Mbt"/>
                 <outlet property="cumulateBetAmountLb" destination="aLA-hZ-Xl3" id="VhR-Dg-f9s"/>
                 <outlet property="linkImv" destination="3mx-Dz-eh4" id="sBS-QY-HY2"/>
                 <outlet property="linkLb" destination="8bP-Fe-TEg" id="mMH-lU-O6I"/>
@@ -45,7 +46,7 @@
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="编组 6" translatesAutoresizingMaskIntoConstraints="NO" id="tbm-Tt-Qr6">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="258"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="258" id="1Y4-zt-2ID"/>
+                                <constraint firstAttribute="width" secondItem="tbm-Tt-Qr6" secondAttribute="height" multiplier="125:86" id="58V-Wv-WJA"/>
                             </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ch3-vb-mrO">
@@ -78,7 +79,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hX9-Ik-1Bl">
-                            <rect key="frame" x="15" y="717.66666666666663" width="345" height="30"/>
+                            <rect key="frame" x="15" y="719.66666666666663" width="345" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="a9O-DC-Yaq"/>
                             </constraints>
@@ -89,7 +90,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tSu-MC-uyH">
-                            <rect key="frame" x="12.666666666666657" y="359.66666666666669" width="350" height="243.00000000000006"/>
+                            <rect key="frame" x="12.666666666666657" y="359.66666666666669" width="350" height="245.00000000000006"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JCk-Vg-Clq">
                                     <rect key="frame" x="0.0" y="0.0" width="350" height="43"/>
@@ -223,7 +224,7 @@
                                     </constraints>
                                 </view>
                                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="26" estimatedRowHeight="-1" sectionHeaderHeight="26" sectionFooterHeight="41" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PPe-X7-c2R">
-                                    <rect key="frame" x="0.0" y="48" width="350" height="195"/>
+                                    <rect key="frame" x="0.0" y="48" width="350" height="197"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 </tableView>
                             </subviews>
@@ -231,7 +232,7 @@
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="JCk-Vg-Clq" secondAttribute="trailing" id="Nrv-Dp-Gk6"/>
                                 <constraint firstAttribute="bottom" secondItem="PPe-X7-c2R" secondAttribute="bottom" id="RFk-l2-2bE"/>
-                                <constraint firstAttribute="height" constant="243" id="RGU-dK-hpT"/>
+                                <constraint firstAttribute="height" constant="245" id="RGU-dK-hpT"/>
                                 <constraint firstItem="JCk-Vg-Clq" firstAttribute="leading" secondItem="tSu-MC-uyH" secondAttribute="leading" id="VFm-4y-qYe"/>
                                 <constraint firstItem="PPe-X7-c2R" firstAttribute="top" secondItem="JCk-Vg-Clq" secondAttribute="bottom" constant="5" id="XlF-7X-ESX"/>
                                 <constraint firstItem="JCk-Vg-Clq" firstAttribute="top" secondItem="tSu-MC-uyH" secondAttribute="top" id="ZaD-Nc-tsC"/>
@@ -246,10 +247,10 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xXO-l9-M0x">
-                            <rect key="frame" x="139" y="612.66666666666663" width="97" height="36"/>
+                            <rect key="frame" x="127.66666666666669" y="614.66666666666663" width="120" height="36"/>
                             <color key="backgroundColor" red="0.37647058823529411" green="0.12549019607843137" blue="0.85882352941176465" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="97" id="IKP-KS-7aw"/>
+                                <constraint firstAttribute="width" constant="120" id="IKP-KS-7aw"/>
                                 <constraint firstAttribute="height" constant="36" id="Wgg-2s-RVd"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
@@ -267,13 +268,13 @@
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" image="titleimg2" translatesAutoresizingMaskIntoConstraints="NO" id="pb9-8O-K1N">
-                            <rect key="frame" x="98" y="688.66666666666663" width="179" height="20"/>
+                            <rect key="frame" x="98" y="690.66666666666663" width="179" height="20"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="20" id="568-mB-cdN"/>
                             </constraints>
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LlO-BA-2Nd">
-                            <rect key="frame" x="12.666666666666657" y="897.66666666666652" width="350" height="280"/>
+                            <rect key="frame" x="12.666666666666657" y="899.66666666666652" width="350" height="280"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="矩形备份 3" translatesAutoresizingMaskIntoConstraints="NO" id="c81-Wd-jo7">
                                     <rect key="frame" x="-1" y="-1" width="352" height="60"/>
@@ -347,13 +348,13 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="编组 3" translatesAutoresizingMaskIntoConstraints="NO" id="sFh-Al-0F9">
-                            <rect key="frame" x="0.0" y="727.66666666666663" width="375" height="200"/>
+                            <rect key="frame" x="0.0" y="729.66666666666663" width="375" height="200"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="sFh-Al-0F9" secondAttribute="height" multiplier="15:8" id="9v1-1E-X7h"/>
                             </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dzw-ok-mqd">
-                            <rect key="frame" x="139" y="1187.6666666666667" width="97" height="36"/>
+                            <rect key="frame" x="139" y="1189.6666666666667" width="97" height="36"/>
                             <color key="backgroundColor" red="0.37647058820000001" green="0.12549019610000001" blue="0.85882352939999995" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="97" id="70j-YA-rTB"/>
@@ -374,14 +375,14 @@
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="titleimg3" translatesAutoresizingMaskIntoConstraints="NO" id="NQ3-Ei-By2">
-                            <rect key="frame" x="119" y="1273.6666666666667" width="137" height="20"/>
+                            <rect key="frame" x="119" y="1275.6666666666667" width="137" height="20"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="137" id="aLx-lp-YYy"/>
                                 <constraint firstAttribute="height" constant="20" id="oCJ-Qd-QhA"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="分享推广链接或长按下载二维码,推荐给您的朋友" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EIG-8e-gqA">
-                            <rect key="frame" x="27.666666666666657" y="1302.3333333333333" width="320" height="15"/>
+                            <rect key="frame" x="27.666666666666657" y="1304.3333333333333" width="320" height="15"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="15" id="vyc-UN-alJ"/>
                                 <constraint firstAttribute="width" constant="320" id="yu8-yR-Lgg"/>
@@ -391,7 +392,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wRc-q4-UbF">
-                            <rect key="frame" x="12.666666666666657" y="1335.3333333333333" width="350" height="202"/>
+                            <rect key="frame" x="12.666666666666657" y="1337.3333333333333" width="350" height="202"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kaZ-FP-r72">
                                     <rect key="frame" x="35" y="13" width="110" height="35"/>
@@ -547,7 +548,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6mB-YC-evT">
-                            <rect key="frame" x="0.0" y="1584" width="375" height="50"/>
+                            <rect key="frame" x="0.0" y="1586" width="375" height="50"/>
                             <color key="backgroundColor" red="0.83529411764705885" green="0.094117647058823528" blue="0.3529411764705882" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="Pzv-kW-jHd"/>
@@ -615,7 +616,7 @@
                 <constraint firstItem="Oee-Jb-axV" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="oji-rq-I3P"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="297.82608695652175" y="439.62053571428572"/>
+            <point key="canvasLocation" x="131" y="439"/>
         </view>
         <tapGestureRecognizer id="JQZ-AE-THM">
             <connections>
