--- a/HYNewNest/Features(主代码)/HomeComponent/DashenBoardComponent/Controller/CNDashenBoardVC.xib
+++ b/HYNewNest/Features(主代码)/HomeComponent/DashenBoardComponent/Controller/CNDashenBoardVC.xib
@@ -1,47 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CNDashenBoardVC">
             <connections>
+                <outlet property="headerSelecView" destination="D7i-Fs-Nzc" id="gmr-fg-87y"/>
+                <outlet property="tableView" destination="UzS-Ar-ppS" id="g3P-qc-1yH"/>
+                <outlet property="tableViewHCons" destination="hpT-Go-7rE" id="brm-Cp-Xg6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="617"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="Csz-nU-Ru6">
-                    <rect key="frame" x="263" y="407" width="20" height="20"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                </activityIndicatorView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D7i-Fs-Nzc" customClass="DSBHeaderSelectionView">
                     <rect key="frame" x="0.0" y="44" width="414" height="45"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="45" id="QRg-XI-oPf"/>
                     </constraints>
                 </view>
-                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hy8-kS-Vae">
-                    <rect key="frame" x="123" y="291" width="49" height="31"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                </switch>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="数据每小时刷新" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i5j-gH-I0z">
+                    <rect key="frame" x="164" y="435" width="86" height="15"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="15" id="ZdT-AF-6Y0"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <color key="textColor" red="0.26666666666666666" green="0.29803921568627451" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" delaysContentTouches="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UzS-Ar-ppS">
+                    <rect key="frame" x="15" y="99" width="384" height="321"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="321" id="hpT-Go-7rE"/>
+                    </constraints>
+                </tableView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="i5j-gH-I0z" firstAttribute="top" secondItem="UzS-Ar-ppS" secondAttribute="bottom" constant="15" id="03B-rQ-i9j"/>
                 <constraint firstItem="D7i-Fs-Nzc" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="5sr-TX-vzh"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="D7i-Fs-Nzc" secondAttribute="trailing" id="71D-cU-Uik"/>
+                <constraint firstItem="i5j-gH-I0z" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="REN-pA-K3G"/>
+                <constraint firstItem="UzS-Ar-ppS" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="15" id="SZ7-Cp-B5R"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="UzS-Ar-ppS" secondAttribute="trailing" constant="15" id="jKJ-rJ-MaJ"/>
                 <constraint firstItem="D7i-Fs-Nzc" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="lhE-X5-PY0"/>
+                <constraint firstItem="UzS-Ar-ppS" firstAttribute="top" secondItem="D7i-Fs-Nzc" secondAttribute="bottom" constant="10" id="q2p-SM-O7T"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
-            <point key="canvasLocation" x="237.68115942028987" y="148.66071428571428"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="202.89855072463769" y="85.379464285714278"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
